# RustDDS-UI

./: .dockerignore  Cargo.toml  INSTALL-linux.md  README.md
apps/explorer/: package.json  pnpm-lock.yaml  svelte.config.js
apps/explorer/src/: svx.d.ts
apps/explorer/src-tauri/: Cargo.toml  tauri.conf.json
apps/explorer/src-tauri/src/: bench.rs  dds_service.rs  dto.rs  lib.rs  main.rs  registry.rs
apps/explorer/src/lib/: DocsLayout.svelte  EmptyState.svelte  Sidebar.svelte  TabEndpoints.svelte  TabQoS.svelte  TabSamples.svelte  TabType.svelte  TopicDetail.svelte  builtin-topics.ts  qos-matching.ts  types.ts
apps/explorer/src/lib/bench/: BenchView.svelte  LineChart.svelte  PairSummaryCard.svelte  VerdictBanner.svelte  bench-types.ts
apps/explorer/src/lib/decoders/: CdrFrameDecoder.svelte
apps/explorer/src/lib/docs/: backends.en.svx  backends.fr.svx  builtin-topics.en.svx  builtin-topics.fr.svx  cdr.en.svx  cdr.fr.svx  chapters.ts  dds-objects.en.svx  dds-objects.fr.svx  discovery.en.svx  discovery.fr.svx  endpoints.en.svx  endpoints.fr.svx  glossary.en.svx  glossary.fr.svx  interactive-workflow.en.svx  interactive-workflow.fr.svx  qos.en.svx  qos.fr.svx  ros2.en.svx  ros2.fr.svx  troubleshooting.en.svx  troubleshooting.fr.svx  welcome.en.svx  welcome.fr.svx  what-is-dds.en.svx  what-is-dds.fr.svx
apps/explorer/src/lib/workflow/: BusNode.svelte  EndpointChip.svelte  ParticipantNode.svelte  QosTinker.svelte  SidePanel.svelte  TimelineControls.svelte  WorkflowDiagram.svelte  workflow-scenario.ts  workflow-state.ts
apps/explorer/src/routes/: +page.svelte
crates/dds-backend/: Cargo.toml
crates/dds-backend/src/: hdds.rs  lib.rs  metrics.rs  rustdds.rs
crates/demo-msgs/: Cargo.toml
crates/demo-msgs/src/: lib.rs
docker/: Dockerfile  docker-compose.yml
examples/pub-hdds/: Cargo.toml
examples/pub-hdds/src/: main.rs
examples/pub-rustdds/: Cargo.toml
examples/pub-rustdds/src/: main.rs
examples/sub-hdds/: Cargo.toml
examples/sub-hdds/src/: main.rs
examples/sub-rustdds/: Cargo.toml
examples/sub-rustdds/src/: main.rs
