[package]
name = "dds-backend"
version.workspace = true
edition.workspace = true

[features]
# At least one backend feature must be enabled; downstream picks what it
# wants. Workspace builds enable both because demos exist for each.
default = ["rustdds-backend"]
rustdds-backend = ["dep:rustdds", "dep:mio"]
hdds-backend = []                                # stub for now; real impl arrives when HDDS lands on crates.io

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# RustDDS backend
rustdds = { version = "0.11", optional = true }
mio = { version = "0.8.5", features = ["net", "os-poll"], optional = true }
