[package]
name = "explorer"
version = "0.1.0"
description = "DDS Explorer (Tauri app)"
authors = ["Charley GEOFFROY"]
edition = "2021"

[lib]
name = "explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dds-backend = { workspace = true, features = ["rustdds-backend"] }
